# hm2

./: README.md
iiwa_description/config/: initial_positions.yaml
iiwa_description/gazebo/: iiwa_gazebo.xacro
iiwa_description/gazebo/models/arucotag/: model.sdf
iiwa_description/gazebo/worlds/: empty.world
iiwa_description/launch/: iiwa_world.launch.py  world.launch.py
ros2_iiwa2/iiwa_description/: CMakeLists.txt  package.xml
ros2_iiwa2/iiwa_description/env-hooks/: iiwa_description.sh.in
ros2_iiwa2/iiwa_description/gazebo/: iiwa_gazebo.xacro
ros2_iiwa2/iiwa_description/gazebo/models/arucotag/: model.sdf
ros2_iiwa2/iiwa_description/gazebo/worlds/: empty.world
ros2_iiwa2/iiwa_description/launch/: iiwa_world.launch.py
ros2_kdl_package/: CMakeLists.txt
ros2_kdl_package/config/: kdl_param.yaml
ros2_kdl_package/include/: kdl_control.h
ros2_kdl_package/launch/: kdl_node_1b.launch.py
ros2_kdl_package/src/: kdl_control.cpp  ros2_kdl_node_1b.cpp
ros2_kdl_package1c/: CMakeLists.txt  package.xml
ros2_kdl_package1c/action/: ExecuteTrajectory.action
ros2_kdl_package1c/config/: client_goal.yaml  kdl_param.yaml
ros2_kdl_package1c/include/: kdl_control.h  utils.h
ros2_kdl_package1c/launch/: execute_trajectory.launch.py  kdl_node_1a.launch.py  kdl_node_1c.launch.py
ros2_kdl_package1c/src/: execute_trajectory_client.cpp  kdl_control.cpp  ros2_kdl_node_1a.cpp  ros2_kdl_node_1b.cpp  ros2_kdl_node_1c.cpp
